# yutalk-poc

./: .gitignore  EVAL_README.md  README.md  main.py  pyproject.toml
data/: eval_metadata.yml  reference_phrases.json
notebooks/: 01_audio_capture.ipynb  02_transcription_comparison.ipynb  03_phoneme_analysis.ipynb
src/: audio_utils.py  eval.py  report.py  scoring.py  transcription.py
tests/: __init__.py  test_audio_utils.py  test_eval.py  test_report.py  test_scoring.py  test_transcription.py
