[project]
name = "yutalk-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.71.0",
    "google-cloud-speech>=2.34.0",
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openai>=2.6.0",
    "opencc>=1.1.9",
    "pandas>=2.3.3",
    "pinyin>=0.4.0",
    "pypinyin>=0.55.0",
    "pytest>=8.3.4",
    "pytest-mock>=3.15.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
]
